cleaned up some code and fixed button on mobile

--- a/client/src/style/blog/categories.scss
+++ b/client/src/style/blog/categories.scss
@@ -92,7 +92,8 @@
   cursor: pointer;
   font-size: 16px;
   @media (max-width: 615px) {
-    right: 20px;
+    right: 10px;
+    transform: translateY(60px);
   }
 }
 
